<resources>
    <string name="app_name">AppAdivina</string>
    <string name="adivina">He pensado un número entre 1 y 100. ¡Adivina cuál es!</string>
    <string name="intentalo">¡Inténtalo!</string>
    <string name="probar">Probar</string>
    <string name="numero">Introduce un número</string>
    <string name="mayor">¿%1$d? ¡Uy! El número que he pensado es mayor</string>
    <string name="menor">¿%1$d? ¡Uy! El número que he pensado es menor</string>
    <string name="acertado">¡¡HAS ACERTADO!!</string>
    <plurals name="intentos">
        <item quantity="one">%d intento restante</item>
        <item quantity="other">%d intentos restantes</item>
    </plurals>
    <string name="Perder">Has perdido. El número era %d</string>
    <string name="VolveraJugar">Volver a jugar</string>
    <string name="rango">Introduce un numero entre 1 y 100</string>
    <string name="vacio">Introduce un número</string>
    <string name="hola">Bienvenido al juego\n ADIVINA MI NÚMERO</string>
    <string name="cesar">Por: César Arévalo</string>
    <string name="jugar">EMPEZAR</string>
    <string name="i">Sólo cuentas con 5 intentos</string>
    <string name="volver">¿Quieres volver a jugar?</string>
    <string name="fin">Fin de la partida</string>
    <string name="salir">Salir</string>

</resources>
